<resources>
    <string name="app_name">Xinfin SDK</string>
    <string name="xdc3_android">XDC.Android</string>
    <string name="enter_xdc_address_here">Enter XDC Address Here</string>
    <string name="or">or</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="xdc_address">XDC Address</string>
    <string name="xdc_address_entered">xdc_address_entered</string>
    <string name="name">Name:</string>
    <string name="symbol">Symbol:</string>
    <string name="decimals">Decimals:</string>
    <string name="total_supply">Total Supply:</string>
    <string name="balance_off">Balance off:</string>
    <string name="transfer">Transfer:</string>
    <string name="allowance">Allowance:</string>
    <string name="approve">Approve:</string>
    <string name="transfer_from">Transfer From:</string>
    <string name="increase_allowance">Increase Allowance:</string>
    <string name="decrease_allowance">Decrease Allowance:</string>
    <string name="select_an_address">Select an address</string>
    <string name="select_from_list">Select from list</string>
    <string name="create">Create</string>
    <string name="enter_xdc_password">Enter XDC Password</string>
    <string name="password">Password</string>
    <string name="new_account">New Account</string>
    <string name="send">Send</string>
    <string name="enter_private_key_here">Enter Private Key here</string>
    <string name="receiver_address">Receiver Address:</string>
    <string name="sender_address">Sender Address:</string>
    <string name="private_key">Private Key:</string>
    <string name="value">Value:</string>
    <string name="error_empty">This field cannot be empty</string>



    <string name="test_add">0x046550ba1d12a302e78996ce7c5d54cf66be0e9c</string>
    <string name="gasprice">4000004</string>
    <string name="gaslimit">50005</string>
    <string name="value_transfer">1000000000000000000</string>
    <string name="privatekeytransfer">0xd596a485cebc97afc2f114286599ff5ac7d62ee907b9543a290a994c6b1de9fb</string>
    <string name="sender_add">0xff55cb8c656a4e94b4151df9bfb88cc069ceb3e1</string>
    <string name="receiver_add">0x63b32225813a3f2b877d77094d25f7ce6653b4b5</string>



    <string name="enter_key">Enter Private key</string>
    <string name="spender">Spender : </string>
    <string name="owner">Owner : </string>
    <string name="spender_add">Spender Address</string>
    <string name="owner_add">Owner Address</string>
    <string name="check_address">Check Address</string>


    <string name="final_token">0xba9d6a36fbc194f5d1aa48a2892ae4bdf6939cb9</string>
    <string name="final_token_owner">0x6ffe09f9302a857fcb122296e3ab3bb80c45cbcd</string>
    <string name="final_private_key">0x07d2fb9a1f3a912000bbf9215ee0815a969b1d49e7e4c5ec94600ae2dfcfa4ce</string>
    <string name="final_spendar_address">0xd7813e7cfdf83d6fa3469d7411b52a50ed2b867f</string>
    <string name="final_spendar_privatekey">0x8a32103448a851b2fed3e95d2b4fbaa5e564f3b8cc42eac0d3be15a96311f355</string>
    <string name="final_to_address_tfrom">0xedb472070566e072f3bdaa50cfa076e772135f33</string>


    <!--  <string name="final721_token">0x301815025bd43513ec36b6c6159ebaa8dff5e36d</string>
     <string name="final721_token">0x301815025bd43513ec36b6c6159ebaa8dff5e36d</string>
     <string name="final721_tokenOwner">0xd7813e7cfdf83d6fa3469d7411b52a50ed2b867f</string>
     <string name="final721_owner_privatekey">0x8a32103448a851b2fed3e95d2b4fbaa5e564f3b8cc42eac0d3be15a96311f355</string>
     <string name="final721_spendar_address">0x6ffe09f9302a857fcb122296e3ab3bb80c45cbcd</string>
     <string name="final721_spendar_privatekey">0x07d2fb9a1f3a912000bbf9215ee0815a969b1d49e7e4c5ec94600ae2dfcfa4ce</string>
     <string name="final721_receiver_address">0xedb472070566e072f3bdaa50cfa076e772135f33</string>
     <string name="final721_tokenId">21</string>
     <string name="final721_interfaceId">0x80ac58cd</string>
     <string name="xdc_721address">XDC 721 Token Address</string>
     <string name="final_tokenUri">0x613fb5f43ae37a60d5f6683d921613c53d75d85d</string> -->



        <string name="final721_token">0x5f07d8ca1f176ec49b738cfe309db9a9cf369c88</string>
        <string name="final721_tokenOwner">0x7af2f691d78c51d0f0368a3c367634c9d76cfe7d</string>
        <string name="final721_owner_privatekey">0x78e5eff6026eeeee03401909c51a1b3bd3b2071dd333632bb4d54c279dc5f1ea</string>
        <string name="final721_spendar_address">0x79dbbbe40993253aa18e930a39d3636b15866725</string>
        <string name="final721_spendar_privatekey">0x03098465d0a7a39e05ca8ab431789507c1d576a2da1de6934964e33ea8d6986a</string>
<!--        <string name="final721_receiver_address">0xedb472070566e072f3bdaa50cfa076e772135f33</string>-->
        <string name="final721_tokenId">25</string>
        <string name="final721_interfaceId">0x80ac58cd</string>
        <string name="xdc_721address">XDC 721 Token Address</string>
    <string name="final_tokenUri">0x5f07d8ca1f176ec49b738cfe309db9a9cf369c88</string>

    <!--token: 0xc246e82fb67bdfcf6fc9859c66c613730f8650c4
+    previos owner : 0x79dbbbe40993253aa18e930a39d3636b15866725
+    private key previous key : 0x03098465d0a7a39e05ca8ab431789507c1d576a2da1de6934964e33ea8d6986a
+    new owner : 0x7af2f691d78c51d0f0368a3c367634c9d76cfe7d
+    private key new Owner : 0x78e5eff6026eeeee03401909c51a1b3bd3b2071dd333632bb4d54c279dc5f1ea
+    id : 27-->



    <string name="getOwnerof">OwnerOf</string>
    <string name="getapproved">GetApproved</string>
    <string name="isapprovedForAll">isApprovedForAll</string>
    <string name="support_interface">Supports Interface</string>
    <string name="setApprovalForAll">SetApprovalForAll</string>


    <string name="final721_token_read">0xf6b4102b25756a33a90f8f192c74e53d22a9628e</string>
    <string name="final721_tokenOwner_read">0x517b6be05e5c50df6876906909c23ad130476cc7</string>
    <string name="final721_owner_privatekey_read">0x7415687b87e1f1bcf55b26e0ddb086f9eb1d31cdc2059a296ce05de51b043258</string>
    <string name="final721_tokenId_read">19</string>
    <string name="final721_token_Index">0</string>


</resources>