<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/background">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginTop="28dp"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_xdc_icon"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:text="@string/xdc3_android"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xdc_address"
        android:textColor="@color/header"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:id="@+id/xdc_address_value"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="7dp"
        android:textColor="@color/background"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_border1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/name"
        android:textColor="@color/header"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="11dp"
        android:text="@string/name"
        android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/name_value"
            android:layout_marginLeft="25dp"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
           android:layout_toRightOf="@+id/name"
            android:layout_marginBottom="11dp"
            android:text="-" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/name_divider"
            android:layout_below="@+id/name"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_below="@+id/name_divider"
            android:id="@+id/symbol"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/symbol"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_below="@+id/name_divider"
            android:id="@+id/symbol_value"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="11dp"
            android:layout_toRightOf="@+id/symbol"
            android:text="-"
            android:layout_marginStart="20dp" />



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/symbol_divider"
            android:layout_below="@+id/symbol"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/decimals"
            android:layout_below="@+id/symbol_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/decimals"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/decimals_value"
            android:layout_below="@+id/symbol_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@id/decimals"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="11dp"
            android:text="-"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/decimals_divider"
            android:layout_below="@+id/decimals"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/total_supply"
            android:layout_below="@+id/decimals_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/total_supply"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/total_supply_value"
            android:layout_below="@+id/decimals_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/total_supply"
            android:layout_marginBottom="11dp"
            android:text="-"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/total_supply_divider"
            android:layout_below="@+id/total_supply"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/balance_off"
            android:layout_below="@+id/total_supply_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/balance_off"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/balance_off_value"
            android:layout_below="@+id/total_supply_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/balance_off"
            android:layout_marginBottom="11dp"
            android:text="-"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/balance_off_divider"
            android:layout_below="@+id/balance_off"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/transfer"
            android:layout_below="@+id/balance_off_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/transfer"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/transfer_value"
            android:layout_below="@+id/balance_off_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/transfer"
            android:layout_marginBottom="11dp"
            android:text="-"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/transfer_divider"
            android:layout_below="@+id/transfer"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/allowance"
            android:layout_below="@+id/transfer_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/allowance"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/allowance_value"
            android:layout_below="@+id/transfer_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/allowance"
            android:layout_marginBottom="11dp"
            android:text="-"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/allowance_divider"
            android:layout_below="@+id/allowance"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/approve"
            android:layout_below="@+id/allowance_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/approve"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/approve_value"
            android:layout_below="@+id/allowance_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/approve"
            android:layout_marginBottom="11dp"
            android:text="-"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/approve_divider"
            android:layout_below="@+id/approve"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/transfer_from"
            android:layout_below="@+id/approve_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/transfer_from"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/transfer_from_value"
            android:layout_below="@+id/approve_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="11dp"
            android:text="-"
            android:layout_toRightOf="@+id/transfer_from"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/transfer_from_divider"
            android:layout_below="@+id/transfer_from"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/increase_allowance"
            android:layout_below="@+id/transfer_from_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/increase_allowance"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/increase_allowance_value"
            android:layout_below="@+id/transfer_from_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/increase_allowance"
            android:layout_marginBottom="11dp"
            android:text="-"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/increase_allowance_divider"
            android:layout_below="@+id/increase_allowance"
            android:background="@color/divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/decrease_allowance"
            android:layout_below="@+id/increase_allowance_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="11dp"
            android:text="@string/decrease_allowance"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/decrease_allowance_value"
            android:layout_below="@+id/increase_allowance_divider"
            android:textColor="@color/header"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="11dp"
            android:text="-"
            android:layout_toRightOf="@+id/decrease_allowance"
            android:layout_marginStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/decrease_allowance_divider"
            android:layout_below="@+id/decrease_allowance"
            android:background="@color/divider"/>

    </RelativeLayout>
    </LinearLayout>

</ScrollView>